// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is has value 1`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is has value 2`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is has value 3`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item has-delete-rule-wrapper css-1v03opz"
                    >
                      <span
                        class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                      >
                        该规则已删除
                      </span>
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          除了自增列及大字段列之外，每个列都必须添加默认值
                        </span>
                      </div>
                      <div
                        class="annotation-wrapper"
                      >
                        <a
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                          href="/sqle/rule/knowledge/ddl_check_column_without_default/MySQL"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          查看更多
                        </a>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item has-delete-rule-wrapper css-1v03opz"
                    >
                      <span
                        class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                      >
                        该规则已删除
                      </span>
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用 BIGINT 无符号类型，即 BIGINT UNSIGNED
                        </span>
                      </div>
                      <div
                        class="annotation-wrapper"
                      >
                        <a
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                          href="/sqle/rule/knowledge/ddl_check_pk_without_bigint_unsigned/MySQL"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          查看更多
                        </a>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item has-delete-rule-wrapper css-1v03opz"
                    >
                      <span
                        class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                      >
                        该规则已删除
                      </span>
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          新建表建议加入 IF NOT EXISTS，保证重复执行不报错
                        </span>
                      </div>
                      <div
                        class="annotation-wrapper"
                      >
                        <a
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                          href="/sqle/rule/knowledge/ddl_check_table_without_if_not_exists/MySQL"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          查看更多
                        </a>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is not has value 1`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item css-1v03opz"
                    >
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          schema test 已存在
                        </span>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is not has value 2`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item css-1v03opz"
                    >
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          schema test 已存在
                        </span>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap when rule name is not has value 3`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item css-1v03opz"
                    >
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          schema test 已存在
                        </span>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap with rule_name and without rule_name 1`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap with rule_name and without rule_name 2`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-txh9fw"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree snap with rule_name and without rule_name 3`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item css-1v03opz"
                    >
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          schema test 已存在
                        </span>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item has-delete-rule-wrapper css-1v03opz"
                    >
                      <span
                        class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                      >
                        该规则已删除
                      </span>
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用 BIGINT 无符号类型，即 BIGINT UNSIGNED
                        </span>
                      </div>
                      <div
                        class="annotation-wrapper"
                      >
                        <a
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                          href="/sqle/rule/knowledge/ddl_check_pk_without_bigint_unsigned/MySQL"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          查看更多
                        </a>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <div
                      class="result-item has-delete-rule-wrapper css-1v03opz"
                    >
                      <span
                        class="ant-tag ant-tag-volcano message-rule-disabled css-dev-only-do-not-override-txh9fw"
                      >
                        该规则已删除
                      </span>
                      <div
                        class="css-9paak3"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 16 16"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                              fill="#F66074"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          新建表建议加入 IF NOT EXISTS，保证重复执行不报错
                        </span>
                      </div>
                      <div
                        class="annotation-wrapper"
                      >
                        <a
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                          href="/sqle/rule/knowledge/ddl_check_table_without_if_not_exists/MySQL"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          查看更多
                        </a>
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/AuditResultTree render tree when auditResult is null 1`] = `
<body>
  <div>
    <div
      class="ant-tree ant-tree-icon-hide ant-tree-unselectable css-1fzwdia css-dev-only-do-not-override-txh9fw ant-tree-show-line"
      role="tree"
    >
      <div>
        <input
          aria-label="for screen reader"
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="ant-tree-treenode"
        style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
      >
        <div
          class="ant-tree-indent"
        >
          <div
            class="ant-tree-indent-unit"
          />
        </div>
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                />
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    class="custom-icon custom-icon-arrow-down ant-tree-switcher-icon css-u3jcp4"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
                        fill="#C3C6CD"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span
                      class="audit-result-tree-title"
                    >
                      审核结果
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-grabbed="false"
                class="ant-tree-treenode ant-tree-treenode-leaf-last"
                draggable="false"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                >
                  <span
                    class="ant-tree-switcher-leaf-line"
                  />
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title="-"
                >
                  <span
                    class="ant-tree-title"
                  >
                    -
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
